[package]
name = "m-bus-parser"
version = "1.1.3"
edition = "2021"
authors = ["Tomasz Komanski"]
exclude = ["/tests"]
license = "MIT"

[lib]
# crate-type = ["rlib", "cdylib", "staticlib"]
crate-type = ["rlib", "dylib"]

[profile.release]
# opt-level = 'z'   # Optimize for size
opt-level = 3       # Optimize for speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce codegen units to improve optimizations

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
aes = "0.8"
cbc = "0.1"
chrono = "0.4"
